Add support for running POI Java Applications as part of benchmarks and add SSPerformanceTest as first example